--- a/src/assets/Support/style.module.scss
+++ b/src/assets/Support/style.module.scss
@@ -5,6 +5,7 @@
   padding: 100px;
   flex-wrap: wrap;
   flex-basis: 300px;
+  font-family: Helvetica, sans-serif;
 
   .supUl {
     list-style: none;
