--- a/src/components/Shop/style.module.scss
+++ b/src/components/Shop/style.module.scss
@@ -54,6 +54,7 @@
   border-radius: 5px;
   padding: 5px;
   margin: 10px;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 .cardHeader img {
@@ -76,7 +77,19 @@
   width: 50%;
   height: 2.5rem;
   background-color: #006fff;
-  color: #FFF;
+  color: #fff;
   border-radius: 5px;
   cursor: pointer;
+}
+
+input[type="text"] {
+  width: 50%;
+  outline: none;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.btn:focus {
+  color: #006fff;
 }
