--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+
 .basket {
   display: flex;
   flex-direction: column;
@@ -17,6 +19,10 @@
   padding: 10px;
 }
 
+.completeBtn {
+  margin-top: 1%;
+}
+
 .completeBtn a {
   width: 300px;
   height: 100px;
@@ -28,3 +34,51 @@
   margin-top: 10px;
   padding: 10px;
 }
+
+.emptyBasket {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  
+  .emptyBasket img {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  
+}
+.emptyBasket button {
+  // shop now button
+  width: 250px;
+  height: 50px;
+  background-color: #006fff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+
+}
+
+.emptyBasket button:hover {
+  background-color: #2a83f7;
+}
+
+.emptyBasket h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  color: #000;
+}
+
+.emptyBasket p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  color: #000;
+}
+
