--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -10,13 +10,9 @@
 .basketItem {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  margin: 10px 0;
-  max-width: 500px;
+  margin: 10px;
   width: 100%;
-  border: 1px solid #000;
-  padding: 10px;
 }
 
 .completeBtn {
@@ -52,7 +48,6 @@
   
 }
 .emptyBasket button {
-  // shop now button
   width: 250px;
   height: 50px;
   background-color: #006fff;
@@ -82,3 +77,36 @@
   color: #000;
 }
 
+.bsktTotal ul {
+  margin-top: 3%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.bsktTotal ul li {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  list-style: none;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #fff;
+  width: 100%;
+  height: 30px;
+  background-color: #006fff;
+}
+
+ul.bsktList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+ul.bsktList li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
