After logging in, it was directed to the store and the filtering in the store was completed.

--- a/src/assets/Header/style.css
+++ b/src/assets/Header/style.css
@@ -120,6 +120,9 @@ a:focus {
   .menu a {
     color: #fff;
   }
+  .menu a:hover {
+    color: rgb(243, 181, 25);
+  }
   .menu {
     position: absolute;
     top: 0;
