--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
 
 .basket {
   display: flex;
@@ -37,15 +37,13 @@
   justify-content: center;
   align-items: center;
   margin-top: 10%;
-  
+
   .emptyBasket img {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-
-  
 }
 .emptyBasket button {
   width: 250px;
@@ -55,10 +53,9 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 10%;
   margin-bottom: 10px;
   padding: 10px;
-
 }
 
 .emptyBasket button:hover {
@@ -66,20 +63,21 @@
 }
 
 .emptyBasket h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 30px;
   color: #000;
 }
 
 .emptyBasket p {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   color: #000;
+  margin-top: 1%;
 }
 
 .bsktTotal ul {
   margin-top: 3%;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -90,7 +88,7 @@
   flex-direction: column;
   justify-content: space-between;
   list-style: none;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: #fff;
   width: 100%;
@@ -109,4 +107,13 @@ ul.bsktList li {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.way p {
+  color: #006fff;
+  text-decoration: underline;
+}
+
+.way p {
+  margin-top: 5%;
 }
