--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -1,34 +1,44 @@
 .loginContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15%;
 }
 
 .loginContainer input {
-    width: 300px;
-    outline: none;
-    height: 50px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 10px;
+  width: 300px;
+  outline: none;
+  height: 50px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  padding: 10px;
 }
 
-.btnButton button {
-    width: 300px;
-    height: 50px;
-    background-color: #006fff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
+.sbmtButton input {
+  width: 300px;
+  height: 50px;
+  background-color: #006fff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
-.btnButton button a {
-    color: #fff;
+.sbmtButton button a {
+  color: #fff;
+}
+
+.way a {
+  color: #006fff;
+  text-decoration: underline;
+}
+
+.way p {
+  margin-top: 5%;
 }
