--- a/src/components/Shop/style.module.scss
+++ b/src/components/Shop/style.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+
   .products {
     display: flex;
     flex-direction: row;
@@ -21,7 +21,7 @@
     border: 1px solid rgb(189, 177, 177);
     border-radius: 25px;
     box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
-    margin: 15px 10PX;
+    margin: 15px 10px;
     transition: 0.2s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -89,7 +89,6 @@
   .brand:hover {
     border-bottom: 1px solid #606063;
   }
-
 }
 .search input {
   outline: none;
@@ -97,120 +96,70 @@
   margin: 8px 0;
   box-sizing: border-box;
   margin: 0 auto;
-  margin-top: 1%;
-  margin-bottom: 1%;
 }
 
 .search {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-top: 3%;
-  position: relative;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.context .btn{
+.context .btn {
   display: flex;
   flex-direction: row;
   border: none;
   outline: none;
-  width:100px;
+  width: 100px;
   margin: 5px;
   padding: 5px;
   font-size: 25px;
   cursor: pointer;
-  background-color:#006fff ;
+  background-color: #006fff;
   color: #fff;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap");
-
-
-.wrapper .searchBox {
-  width: 500px;
-  background: #006fff;
-  border-radius: 5px;
-  height: 65px;
-  display: flex;
-  padding: 10px;
-  box-shadow: 0 8px 6px -10px #b3c6ff;
-  display: flex;
-  justify-content: center;
+.dropdown {
+  width: 400px;
+  user-select: none;
 }
 
-.wrapper .searchBox .dropdown {
-  width: 150px;
-  
-  color: #9fa3b1;
-  position: relative;
+.dropdown .dropdownBtn {
+  padding: 15px 20px;
+  background: rgb(255 255 255);
+  box-shadow: 3px 3px 10px 6px rgb(0 0 0 / 15%);
+  font-weight: bold;
+  color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   cursor: pointer;
 }
 
-.wrapper .searchBox .dropdown .defaultOption {
-  text-transform: uppercase;
-  padding: 13px 15px;
-  font-size: 14px;
-  color: #fff;
-}
-
-.wrapper .searchBox .dropdown ul {
-  position: absolute;
-  top: 70px;
-  left: -10px;
+.dropdown .dropdownContent {
+  top: 110%;
+  padding: 15px 0;
   background: #fff;
-  width: 150px;
-  border-radius: 5px;
-  padding: 20px;
-  display: none;
-  box-shadow: 8px 8px 6px -10px #b3c6ff;
-}
-
-.wrapper .searchBox .dropdown ul.active {
-  display: block;
-}
-
-.wrapper .searchBox .dropdown ul li {
-  padding-bottom: 20px;
-}
-
-.wrapper .searchBox .dropdown ul li:last-child {
-  padding-bottom: 0;
-}
-
-.wrapper .searchBox .dropdown ul li:hover {
-  color: #6f768d;
-}
-
-.wrapper .searchBox .dropdown:before {
-  content: "";
-  position: absolute;
-  top: 18px;
-  right: 20px;
-  border: 8px solid;
-  border-color: #fff transparent transparent transparent;
-}
-
-.wrapper .searchBox .searchField {
-  width: 350px;
-  height: 100%;
-  position: relative;
-}
-
-.wrapper .searchBox .searchField .input {
+  box-shadow: 3px 3px 10px 6px rgb(0 0 0 / 15%);
+  font-weight: 500;
+  color: #333;
   width: 100%;
-  height: 100%;
-  border: 0px;
-  font-size: 16px;
-  padding-left: 20px;
-  padding-right: 38px;
-  color: #6f768d;
-  outline: none;
+  margin-top: 4%;
 }
 
-.wrapper .searchBox .searchField .fas {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 22px;
-  color: #5078ef;
+.dropdown .dropdownContent .dropdownItem {
+  padding: 10px;
   cursor: pointer;
+  transition: all 0.2s;
+}
+
+.dropdown .dropdownContent .dropdownItem:hover {
+  background: #f4f4f4;
+}
+
+@media (max-width: 612px) {
+  .search input {
+    margin-top: 10%;
+  }
 }
