--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -10,9 +10,13 @@
 .basketItem {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  margin: 10px;
+  margin: 10px 0;
+  max-width: 500px;
   width: 100%;
+  border: 1px solid #000;
+  padding: 10px;
 }
 
 .completeBtn {
@@ -37,13 +41,15 @@
   justify-content: center;
   align-items: center;
   margin-top: 10%;
-
+  
   .emptyBasket img {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
+  
 }
 .emptyBasket button {
   width: 250px;
@@ -53,9 +59,10 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  margin-top: 10%;
+  margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
+
 }
 
 .emptyBasket button:hover {
@@ -63,57 +70,13 @@
 }
 
 .emptyBasket h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 30px;
   color: #000;
 }
 
 .emptyBasket p {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   color: #000;
-  margin-top: 1%;
-}
-
-.bsktTotal ul {
-  margin-top: 3%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.bsktTotal ul li {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  list-style: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  color: #fff;
-  width: 100%;
-  height: 30px;
-  background-color: #006fff;
-}
-
-ul.bsktList {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-
-ul.bsktList li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.way p {
-  color: #006fff;
-  text-decoration: underline;
-}
-
-.way p {
-  margin-top: 5%;
 }
