--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -41,15 +41,13 @@
   justify-content: center;
   align-items: center;
   margin-top: 10%;
-  
+
   .emptyBasket img {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-
-  
 }
 .emptyBasket button {
   width: 250px;
@@ -62,7 +60,6 @@
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
-
 }
 
 .emptyBasket button:hover {
@@ -70,13 +67,20 @@
 }
 
 .emptyBasket h1 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 30px;
   color: #000;
+  margin-bottom: 10px;
 }
 
 .emptyBasket p {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   color: #000;
+  margin-bottom: 10px;
+}
+
+p.wayP {
+  color: #006fff;
+  text-decoration: underline;
 }
