--- a/src/components/Login/style.module.scss
+++ b/src/components/Login/style.module.scss
@@ -3,7 +3,21 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 15%;
+  margin-top: 10%;
+}
+
+.login {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  max-width: 800px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 100px #ccc;
+  padding: 50px;
 }
 
 .loginContainer input {
@@ -34,11 +48,23 @@
   color: #fff;
 }
 
-.way a {
+p.wayP {
   color: #006fff;
   text-decoration: underline;
 }
 
-.way p {
+p.wayP {
   margin-top: 5%;
+}
+
+.inputTag {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px;
+}
+
+.loginHeader {
+  margin-bottom: 73px;
+  font-family: Arial, Helvetica, sans-serif;
 }
