--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -1,22 +1,69 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
 
-.basket {
+.basketHeader {
+  display:flex;
+  justify-content: center;
+}
+
+.basketHeader ul {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 3%;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  color: #fff;
+  background-color: #006fff;
+  padding: 1rem;
+}
+
+.basketItems {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .basketItem {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  width: 50%;
   align-items: center;
-  margin: 10px 0;
-  max-width: 500px;
-  width: 100%;
-  border: 1px solid #000;
-  padding: 10px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 3%;
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 1rem;
+  font-weight: 300;
+  border: 1px solid #006fff;
+  color: #000;
+  padding: 1rem;
+  justify-content: space-between;
+
+  .itemP {
+    margin-top: 5%;
+  }
+}
+
+.basketItemName {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.basketItemQuantity {
+  display:flex;
+
+}
+
+.basketItemImg p {
+  display: flex;
 }
 
 .completeBtn {
@@ -83,4 +130,46 @@
 p.wayP {
   color: #006fff;
   text-decoration: underline;
+}
+
+select {
+  width: 70px;
+  height: 30px;
+  border: 1px solid #006fff;
+  border-radius: 5px;
+  outline: none;
+}
+
+.basketTotal {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 25%;
+  margin-top: 1%;
+  font-family: 'Nanum Gothic', sans-serif;
+  text-decoration: underline #006fff;
+}
+
+@media (max-width: 720px) {
+  .basketItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .basketItemImg {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .basketItemQuantity {
+    margin-top: 5%;
+  }
+
+  .basketItemSubtotal {
+    margin-top: 5%;
+  }
 }
