Added login requirement for cart

--- a/src/components/Basket/style.module.scss
+++ b/src/components/Basket/style.module.scss
@@ -150,6 +150,10 @@ select {
   text-decoration: underline #006fff;
 }
 
+.logP {
+  color: #006fff;
+}
+
 @media (max-width: 720px) {
   .basketItem {
     display: flex;
